--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
+    "gh-pages": "^2.0.1",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2"
   },
